SCA MIO are fun

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -532,3 +532,13 @@ PB_Air_Industrialist:0 "Air Industrialist"
 PB_Eccentric_Futurist:0 "Man of the Future"
 PB_Medical_Pioneer:0 "Medical Pioneer"
 PB_Young_Writer:0 "Young Writer"
+
+##########################
+# SCA
+##########################
+
+PB_SCA_New_Ford:0 "New Ford"
+unlock_mio_new_Ford:0 "The Military Industrial Organization §RNew Ford§! will be unlocked as a §YTruck Manufacturer§!"
+SCA_using_what_we_got:0 "Using what we have to get it done"
+SCA_take_over_lois_name:0 "Incorporate St.Louis Works"
+ SCA_restore_production_name:0 "Restore Quality Production Standards"
