--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -173,6 +173,9 @@
   PB_Continental_Trucking:0 "Continental Trucking"
   PB_Continental_Trucking_desc:0 ""
 
+ #PB_SCA_New_Ford:0 "New Ford"
+ #PB_SCA_New_Ford_desc:0 "can this have desc?"
+
   PB_SCA_Boston_Industries:0 "Boston Industries"
   PB_Boston_Industries:0 "Boston Industries"
   PB_Boston_Industries_desc:0 ""
@@ -1588,6 +1591,10 @@
   SCA59title:0 "Trial of the Damned"
   SCA59desc:0 "Across America under one fell swoop all opposition, from the previous Philadelphia administration and otherwise, was duly arrested. Generals, politicians, and other members of any military or bureaucratic capacity that opposed our armies had found themselves tightly locked away where their most deserved fate would await them. Most military leaders that were captured during the war time offensives of our army were hanged or shot in mock executions during the spur of the moment, but some were kept purposely alive. The most prestigious of these arrests includes George C. Marshall, primary field marshal of the Commonwealth government, who had attempted to lead a last stand insurgency against occupation forces stationed in Boston.\n\nGeorge was soon arrested and detained alongside some of his closest allies and a handful of remaining cabinet members of the Commonwealth government. The C.I.G have now found it necessary that the crimes of Marshall and his men shall be revealed not only to the nation, but to the entire world. Where he will soon await a pre-ordained execution after a rigged trial hearing. " 
   SCA59opta:0 "Revolution Triumphant!"
+
+  SCA60title:0 "Fords Old Slaves"
+  SCA60desc:0 "Oh what a great man he is. How progressive and innovate he is. His intellect and planning is like no other. No other man is so considerate and donates so much money.\nAnd look how fairly he treats his workers!\nHow fairly he treats his workers...\nHis... Workers...\nFairly...\n...\nLies... All of them...\nHe is an unhuman capitalist like all others. Who does not pay his workers their fair share. Someone who cracks the bones who anyone who tries unionise. A charlatan who passes the achievements of others as his own. Proressive so far their skin is white and have a manly voice.\nA man who did not hesistate a second to replace his best workers with machines.\nBut we the old craftsmen of the works will not rot in the streets. We will rise to new heights. We will show him who trulely made the Ford Cars great. We will build the metal horses for the revolution so that men and goods get back to the old home.\n...\nSo that they can make Henry Ford pay..." 
+  SCA60opta:0 "We are the true masters."
 
   ##########################
   # PUPPETS/AUTONOMIES
