--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -909,7 +909,7 @@
  STATE_907:0 "West Rio Grande"
  STATE_908:0 "East Iturbides"
  STATE_909:0 "West-Rhineland"
- STATE_910:0 "Terneuzen"
+ STATE_910:0 "Zeeuws-Vlaanderen"
  STATE_911:0 "Rotterdam-Zeeland"
  STATE_918:0 "Borkou"
  STATE_919:0 "Wadi Fira"
@@ -942,3 +942,7 @@
  STATE_948:0 "Stephens"
  STATE_950:0 "Cavelier"
  STATE_956:0 "Northern Ergun"
+ STATE_957:0 "Nehalennia"
+ STATE_958:0 "Hesus"
+ STATE_959:0 "Limburg"
+ STATE_960:0 "Gelderland"
