--- a/localisation/english/PB_Modifiers_l_english.yml
+++ b/localisation/english/PB_Modifiers_l_english.yml
@@ -3,6 +3,7 @@
 ni_drift:0 "£GFX_change_government Daily Neo-Imperialism Support"
 ds_drift:0 "£GFX_change_government Daily Despotism Support"
 rc_drift:0 "£GFX_change_government Daily Reactionary Support"
+an_drift:0 "£GFX_change_government Daily Anarcho-Liberal Support"
 cn_drift:0 "£GFX_change_government Daily Conservative Support"
 lb_drift:0 "£GFX_change_government Daily Liberal Support"
 ss_drift:0 "£GFX_change_government Daily State Socialist Support"
@@ -11,6 +12,7 @@ jc_drift:0 "£GFX_change_government Daily Jacobin Support"
 ni_acceptance:0 "£GFX_change_government Acceptance of Neo-Imperialism Diplomacy"
 ds_acceptance:0 "£GFX_change_government Acceptance of Despotism Diplomacy"
 rc_acceptance:0 "£GFX_change_government Acceptance of Reactionary Diplomacy"
+an_acceptance:0 "£GFX_change_government Acceptance of Anarco-Liberal Diplomacy"
 cn_acceptance:0 "£GFX_change_government Acceptance of Conservative Diplomacy"
 lb_acceptance:0 "£GFX_change_government Acceptance of Liberal Diplomacy"
 ss_acceptance:0 "£GFX_change_government Acceptance of State Socialist Diplomacy"
