--- a/localisation/english/PB_Martians_l_english.yml
+++ b/localisation/english/PB_Martians_l_english.yml
@@ -10,11 +10,16 @@
   PB_Mars_First_Wave_TFD_desc:0 "This is but the first strike of the invasion, but we must strike hard and fast. Humans will recoup and fight back against us the longer they are left to their own devices. The major powers of the planet must be eliminated swiftly.\n\nTripods will march through the capitals of Earth, burning away every trace of humanity until only that which we have created remains."
   PB_Mars_Extermination_or_Extinction:0 "Extermination or Extinction"
   PB_Mars_Extermination_or_Extinction_desc:0 "Mars was once a vast empire, spanning from the Home World to the Kaiper Belt, but that was a long time ago. Decades of hive infighting and atomic civil war have rendered the surface uninhabitable. Our species is dying, the oceans have frozen, our cities and canals lie decimated.\n\nUntil we saw Earth; once discounted as a mere primitive world, Earth has developed into a vast complex network of life. It mocks us, taunting us with breathable air and drinkable water. We are going to take this world for ourselves from a humanity that clearly cannot appreciate what it has."
+  PB_Mars_Extermination_or_Extinction2:0 "Extermination or Extinction"
+  PB_Mars_Extermination_or_Extinction2_desc:0 "Mars was once a vast empire, spanning from the Home World to the Kaiper Belt, but that was a long time ago. Decades of hive infighting and atomic civil war have rendered the surface uninhabitable. Our species is dying, the oceans have frozen, our cities and canals lie decimated.\n\nUntil we saw Earth; once discounted as a mere primitive world, Earth has developed into a vast complex network of life. It mocks us, taunting us with breathable air and drinkable water. We are going to take this world for ourselves from a humanity that clearly cannot appreciate what it has."
   PB_Mars_Stunted_Development:0 "Stunted Development"
   PB_Mars_Stunted_Development_desc:0 ""
   PB_Mars_Stunted_Development2:0 "Stunted Development"
   PB_Mars_Stunted_Development2_desc:0 "Our science could once raise the dead, build spires to the heavens, and destroy moons. Now, we are left with the husk of the knowledge our world once had. While we can still replicate most of our technology, we may never regain the information that has been lost to decades of nuclear war. Only through studying human technology can we hope to achieve a fraction of what we once had."
   PB_Mars_Home_away_from_Home:0 "A Home Away from Home"
+
+  PB_Mars_Flu_Outbreak:0 "Flu Epidemic"
+  PB_Mars_Flu_Outbreak2:0 "Mitigated Flu Epidemic"
 
   PB_Alien_Panic:0 "The Great Red Panic"
 
@@ -52,7 +57,7 @@
 
   MIF_Reinforcement_Protocols_tt:0 "§YThe amount of Units and Equipment sent from the Homeworld will§! §Gincrease!§!"
 
-  MIF_Begin_Terraforming_tt:0 "§YWe can begin§!§rconverting§! §Ystates to Martian §!§Gcores§!"
+  MIF_Begin_Terraforming_tt:0 "§YWe can begin§! §rconverting§! §Ystates to Martian §!§Gcores§!"
 
   MIF_Study_Bacteria_tt:0 "§YThis will §Gprevent§! §Your forces from being affected by Earth diseases§!"
 
@@ -164,6 +169,22 @@
   invasioncounterresponse.1.t:0 "The War turns in favor of Mars"
   invasioncounterresponse.1.d:0 "The Martian invasion had mercifully spared Germany, but we cannot watch from the sidelines as the world falls into darkness. In a surprise announcement, the Kaiser brought in representatives of dozens of nations from across the world and declared the creation of the “League of Earth”. For the time being, these states will unify their militaries and political apparatus to better combat the Martian invasion. In an unprecedented move, even the former enemies of the Latin Bloc have vowed their support, willing to lay down their revanchist aims to protect humanity.\n\nNaturally, the Martians have only responded to this with further force and subjugation. The League of Earth will stand against this invasion, whatever the cost may be. Humanity must stand against these invaders together, or we will perish as individuals.\n\nWe can’t be consumed by our petty differences anymore. We must be united in our common interest. We’re fighting for our right to live, to exist. We will not go quietly into the night. We will not vanish without a fight. We’re going to live on and we’re going to survive.\n\nAnd we will make the Martians pay for every inch."
   invasioncounterresponse.1.a:0 "We must do what we can to protect humanity."
+
+  invasionflavor.1.t:0 "Examining Human History"
+  invasionflavor.1.d:0 "While obviously not relevant to our military concerns, several of our scholars have begun going over the history of this world. Prior to this desperate invasion, Earth was deemed uninhabitable for Martian colonization during the Golden Age of our civilization. It seems in that time, hominids spread and came to dominate this world, overtaking other major species. The closest evolutionary equivalent to us seems to be what they refer to as an “octopus”, and while intelligent to some degree, these creatures haven’t reached sapience. Perhaps once this world is conquered, we can attempt to enlighten them to our level.\n\nHistorically, humans have developed along similar lines to us. A lengthy armed conflict preceded this invasion which they refer to as the “Great War”. This Great War was far smaller in scale than the First Great War on Mars or the Fifteenth Martian Civil War that cut off the stellar colonies. Of interest, however, is how this conflict advanced their technology. Though they never developed atomic weaponry, they have developed a wide array of strange implements that mirror our own technological development.\n\nA line of inquiry that we must investigate further once these pathetic creatures are under our rule."
+  invasionflavor.1.a:0 "How curious."
+
+  invasionflavor.2.t:0 "Taking to the Skies"
+  invasionflavor.2.d:0 "After some time, we’ve been able to get the Martian Air forces active and functioning again. Invasion Command originally intended to pack aircraft construction equipment, but due to the constraints of our travel method we were forced to pack light.\n\nWith our combat forces now able to be supported from the air, we can also now begin combating the human’s main advantage thus far: air power.\n\nFor the first few months of the invasion, the humans have maintained air superiority over our forces, but with the first hoverwings coming off the assembly line that advantage will soon be a thing of the past."
+  invasionflavor.2.a:0 "Let's see how they like it."
+
+  invasionflavor.3.t:0 "Processing Camps Established"
+  invasionflavor.3.d:0 "The first Processing Camps have been established within our occupation zone, allowing us to begin converting humans into terraforming material. Said material, colloquially known as “Red Weed”, is instrumental in adjusting Earth’s atmosphere. The material is created by exsanguinating a human body, then processing the blood into a modified slurry which can then be aerosolized. This gas, while toxic to humans, promotes the growth of the terraforming material.\n\nThe more terraforming material that an area has, the faster the planet’s atmosphere will shift to something more suitable for long term habitation. While Martians can survive outside controlled environments on Earth, supplemental chemicals are needed to prevent long term health effects.\n\nUltimately, this will make the Earth uninhabitable for most existing species, but will shift the planet’s atmosphere to be more equivalent to that of Mars’ prior to the Great Conflagration.\n\nOur technicians report, however, that we will need many more human bodies if this is to be achieved."
+  invasionflavor.3.a:0 "We'll need more breeding stock."
+
+  invasionflavor.4.t:0 "Bringing on the Locals"
+  invasionflavor.4.d:0 ""
+  invasionflavor.4.a:0 "As long as they do their jobs."
 
 # Decisions #
   PB_MARS_Invasion_Command:0 "Central Invasion Command"
@@ -380,22 +401,22 @@
   MIF_United_Invasion_cn_ADJ:0 "Martian"
   MIF_United_Invasion_an_ADJ:0 "Martian"
 
-  MIF_Earth_League_ni:0 "League of Earth"
-  MIF_Earth_League_ni_DEF:0 "The League of Earth"
+  MIF_Earth_League_ni:0 "Empire of Man"
+  MIF_Earth_League_ni_DEF:0 "The Empire of Man"
   MIF_Earth_League_ds:0 "League of Earth"
   MIF_Earth_League_ds_DEF:0 "The League of Earth"
   MIF_Earth_League_rc:0 "League of Earth"
   MIF_Earth_League_rc_DEF:0 "The League of Earth"
-  MIF_Earth_League_an:0 "League of Earth"
-  MIF_Earth_League_an_DEF:0 "The League of Earth"
+  MIF_Earth_League_an:0 "Earth Incorporated"
+  MIF_Earth_League_an_DEF:0 "The Earth Incorporated"
   MIF_Earth_League_cn:0 "League of Earth"
   MIF_Earth_League_cn_DEF:0 "The League of Earth"
   MIF_Earth_League_lb:0 "League of Earth"
   MIF_Earth_League_lb_DEF:0 "The League of Earth"
   MIF_Earth_League_ss:0 "League of Earth"
   MIF_Earth_League_ss_DEF:0 "The League of Earth"
-  MIF_Earth_League_jc:0 "League of Earth"
-  MIF_Earth_League_jc_DEF:0 "The League of Earth"
+  MIF_Earth_League_jc:0 "World Republic"
+  MIF_Earth_League_jc_DEF:0 "The World Republic"
   MIF_Earth_League_ni_ADJ:0 "Human"
   MIF_Earth_League_rc_ADJ:0 "Human"
   MIF_Earth_League_lb_ADJ:0 "Human"
