--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -995,39 +995,39 @@
 	PBNews.260.a:0 "The chances of anything being on Mars are a million to one!"
 
   PBNews.261.t:0 "ALIEN LIFE?"
-  PBNews.261.d:0 ""
+  PBNews.261.d:0 "An anomalous object crash landed outside Grover’s Mill, New Jersey this morning. Commonwealth authorities have locked down the surrounding area, although it has nonetheless been swarmed by press and curious onlookers. Scientists on-site have stated the object appears to be artificial in construction, resembling a large metal jar.\n\nSome have theorized that the object contains extraterrestrials, while others believe it may be a failed British or Russian orbital device. Until the object can be opened and further investigated, however, its’ origins and intent remains to be seen."
   PBNews.261.a:0 "What wonders might they bring us?"
 
   PBNews.262.t:0 "ALIEN MASSACRE!"
-  PBNews.262.d:0 ""
+  PBNews.262.d:0 "After a few days, the anomalous object in Grover’s Mill has opened. Witnesses report tentacled alien creatures, resembling some monster mix of a brain and an octopus, emerging and regarding the crowd. Not long after, they unleashed some kind of directed energy weapon against the surrounding area, killing a great many people. The exact death toll remains undetermined, as authorities have barred any entry and begun assembling troops around the object.\n\nThe Commonwealth parliament has announced their intent to move on the object and apprehend the creatures."
   PBNews.262.a:0 "What the hell?"
 
   PBNews.263.t:0 "ALIENS INVADE BRITAIN"
-  PBNews.263.d:0 ""
+  PBNews.263.d:0 "While the Martian menace rampages across the American Northeast, another pod crashed through the atmosphere and landed in the town of Woking, to the South of the London Sprawl. It appears the pod is identical to the one that landed in New Jersey, sparking panic across England as the alien invasion now arrives on their shores.\n\nThe British Expeditionary Force and Home Guard have mobilized to attempt to countermand the invaders, but with many of their troops tied up in North America, their ability to combat the incursion may be greatly reduced."
   PBNews.263.a:0 "They could have at least invaded Manchester first."
 
   PBNews.264.t:0 "ALIENS LAND IN TUNGUSKA"
-  PBNews.264.d:0 ""
+  PBNews.264.d:0 "An intense explosion rocked the Siberian countryside last night as another alien pod crashed into Earth. It has been speculated that the object was originally intended for Western Russia, possibly Moscow or St. Petersburg, but this cannot be ascertained with any certainty. With the remote nature of the region, the Russian army has been slow to respond.\n\nLocals have already reported that the Martians have emerged and begun clearing the surrounding countryside, driving refugees in all directions. Many fear that the Martians may successfully take and sever the Trans-Siberian Railway, cutting Siberia off from the rest of Russia."
   PBNews.264.a:0 "I suppose they went a bit off course."
   
   PBNews.265.t:0 "MARTIAN FLU?"
-  PBNews.265.d:0 ""
+  PBNews.265.d:0 "Combat correspondents have reported that Martian forces have begun to waver. It appears that some sort of illness has begun to ripple through their ranks, believed to be some form of flu or viral disease. Investigators speculate that the Martians may have been unequipped for Earthly diseases, as their civilization may have either eradicated diseases entirely or be equipped for only Martian ones.\n\nNonetheless, this is a major victory for the Earthly forces, potentially giving humanity an opportunity to push the Martians out of contested areas."
   PBNews.265.a:0 "Apparently they'd never heard of vaccines."
 
   PBNews.266.t:0 "LEAGUE OF EARTH FORMED"
-  PBNews.266.d:0 ""
+  PBNews.266.d:0 "In a shocking turn of events, diplomats assembled in the German capital of Frankfurt to proclaim the formation of the “League of Earth”. The League, lead by a coalition of the nations of Earth, plans to begin an open offensive against the Martians who have now occupied or otherwise destabilized the major powers.\n\nPreviously bitter enemies, the Habsburgs and the former Latin powers have set aside their differences to combat a new existential threat. While humanity may turn back against itself once the Martians are repelled, at least for now, we stand united."
   PBNews.266.a:0 "Let's kill those Martian bastards, together."
 
   PBNews.267.t:0 "MARTIANS SURRENDER"
-  PBNews.267.d:0 ""
+  PBNews.267.d:0 "Facing imminent defeat, the Martian forces have approached the League with the intent to surrender. After some negotiations, Martian Invasion Command ordered their forces to stand down and surrender to the Human coalition. With their morale collapsing, many of the Martian army groups have fled into the countryside to fight on their own terms, while the rest have reported to be disarmed and processed.\n\nThe question of what to do with the orphaned invaders remains, with warhawks advocating for their extermination while others have advocated for resettling them in a quarantined district."
   PBNews.267.a:0 "They invaded the wrong planet."
   
   PBNews.268.t:0 "TERRAN-MARTIAN ARMISTICE"
-  PBNews.268.d:0 ""
+  PBNews.268.d:0 "Facing imminent defeat, the League of Earth has surrendered to the Martian forces. In a speech before the new Terran Congress, various diplomats and leaders announced the formal unification of Earth and Mars into a single political entity: The Terran-Martian Federation.\n\nEarth has been devastated by the invasion, with millions left homeless and millions more dead. The Martian-aligned Earth forces have already begun the process of rebuilding and repatriating surviving humans to protected cities across the planet. The first expedition of Martian colonists is expected to arrive soon."
   PBNews.268.a:0 "Two planets, united as one."
 
   PBNews.269.t:0 "HUMANITY SURRENDERS"
-  PBNews.269.d:0 ""
+  PBNews.269.d:0 "Facing imminent defeat, the League of Earth has collapsed in the face of the Martian advance. No official surrender was signed, as no human was alive to complete the paperwork. Instead, the League’s military command has fallen, leaving the remaining human resistance disparate and disorganized. In time, it seems likely they will be exterminated as well.\n\nFurther Martian cylinders have landed across the planet, bringing with them further forces bent on eradicating any evidence of humanity. Those who have been captured live as little more than cattle to be processed for food or terraforming material."
   PBNews.269.a:0 "We had a good run, I suppose."
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
