SPEVNT and pre-finalization checks

--- a/localisation/english/PB_Opener_l_english.yml
+++ b/localisation/english/PB_Opener_l_english.yml
@@ -17,9 +17,15 @@
   Opener.4.b:0 "Leave it as is"
 
   Opener.5.t:0 "Enable Halloween Content?"
-  Opener.5.d:0 "This option will allow you to enable Halloween 2023 content, including the Martian Invasion. By enabling this, content in the mod will be derailed from normal functionality. Bugs and issues may occur due to preexisting content conflicts. Please keep this in mind when playing."
+  Opener.5.d:0 "This option will allow you to enable Halloween 2023 content, including the Martian Invasion. By enabling this, content in the mod will be derailed from normal functionality. Bugs and issues may occur due to preexisting content conflicts. Please keep this in mind when playing.\n\nIn order to play as the Martians, start the game as either the United Commonwealth, Imperial Britain or Russian Empire."
   Opener.5.a:0 "Enable Halloween Content"
   Opener.5.b:0 "No."
+
+  Opener.6.t:0 "Halloween Event Difficulty"
+  Opener.6.d:0 "By activating the Halloween Content, you can choose a difficulty level for the Martian Invasion. This will dictate what buffs the Martians spawn with, if any, and will make their invasion either significantly easier or significantly more difficult.\n\nChoosing the Top Option will result in the Martians receiving no buffs\n\nChoosing the Middle Option will result in the Martians receiving some buffs\n\nChoosing the Bottom Option will result in the Martians receiving overpowered buffs."
+  Opener.6.a:0 "Damn I'm Good"
+  Opener.6.b:0 "Let's Rock"
+  Opener.6.c:0 "Piece of Cake"
 
   PB_THIS_WILL_BREAK_THE_MOD_tt:0 "§RThis will break the mod!§!"
   PB_THIS_WILL_NOT_BREAK_THE_MOD_tt:0 "§GThis will not break the mod!§!"
