--- a/localisation/english/PB_Super_Events_l_english.yml
+++ b/localisation/english/PB_Super_Events_l_english.yml
@@ -120,3 +120,7 @@
   SPEVNT_Imperial_Federation:0 "THE EMPIRE UNITED"
   SPEVNT_Imperial_Federation_TEXT:0 "If there be a God, I think that what he would like me to do is paint as much of the map of Earth as British Red as possible.\n\n§O-Cecil Rhodes-§!"
   SPEVNT_Imperial_Federation_CLOSETEXT:0 "§OTHE LION SWALLOWS THE SUN§!"
+
+  SPEVNT_Great_Martian_War:0 "THE GREAT MARTIAN WAR"
+  SPEVNT_Great_Martian_War_TEXT:0 "And before we judge of them too harshly we must remember what ruthless and utter destruction our own species has wrought. Are we such apostles of mercy as to complain if the Martians warred in the same spirit?\n\n§O-H.G Wells-§!"
+  SPEVNT_Great_Martian_War_CLOSETEXT:0 "§OHUMANITY TREMBLES§!"
