--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -519,16 +519,16 @@
   HOL_cn_party:0 "CDU"
   HOL_ss_party_long:0 "Sociaal-Democratische Partij"
   HOL_ss_party:0 "SDP"
-  HOL_lb_party_long:0 "Liberale Unie"
-  HOL_lb_party:0 "LU"
+  HOL_lb_party_long:0 "Boerenpartij"
+  HOL_lb_party:0 "BP"
   HOL_jc_party_long:0 "Revolutionair-Socialistische Arbeiderspartij"
   HOL_jc_party:0 "RSAP"
-  HOL_rc_party_long:0 "Alliantie van Nationale Wederopbouw"
-  HOL_rc_party:0 "AvNW"
-  HOL_ni_party_long:0 "Nieuwe Nassau Partij"
-  HOL_ni_party:0 "NNP"
-  HOL_ds_party_long:0 "Nationale Beweging"
-  HOL_ds_party:0 "NB"
+  HOL_rc_party_long:0 "Regenten"
+  HOL_rc_party:0 "Regenten"
+  HOL_ni_party_long:0 "Nationale Beweging"
+  HOL_ni_party:0 "NB"
+  HOL_ds_party_long:0 "Alliantie van Nationale Wederopbouw"
+  HOL_ds_party:0 "AvNW"
   HOL_an_party_long:0 "Vrijzinnig-Democratische Bond"
   HOL_an_party:0 "VDB"
 
