--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -9090,6 +9090,10 @@ TAN:0 "Tuvan Republic"
 TAN_DEF:0 "Tuvan Republic"
 TAN_ADJ:0 "Tuvan"
 
+FRI:0 "Republic of Frisia"
+FRI_DEF:0 "Republic of Frisia"
+FRI_ADJ:0 "Frisian"
+
 MLD:0 "Republic Of The Maldives"
 MLD_DEF:0 "Republic Of The Maldives"
 MLD_ADJ:0 "Maldivian"
