--- a/localisation/english/PB_Martians_l_english.yml
+++ b/localisation/english/PB_Martians_l_english.yml
@@ -84,6 +84,10 @@
 
   MIF_Home_away_from_Home_tt:0 "§YWe must sever our ties to the Mother-Hive, and while it will doom our brethren at home, this planet will be our second chance.\n\nNo further reinforcements will arrive.§!"
 
+  MIF_Oh_Lawd_They_Comin_tt:0 "§YThe nations of Earth will soon unite against us.§!"
+
+  MIF_Probably_Not_a_Crash_tt:0 "§YNote:§! The League of Earth formation is a bit processor intensive, so the game may be frozen for a few seconds while the event fires. This may appear to be a crash, but give it a second and it should clear up."
+
 # Events #
   invasion.1.t:0 "Flashes on Mars Detected"
   invasion.1.d:0 "Astronomers at the American Astronomical Institute detected a series of strange green flashes on Mars last night. The flashes, believed to be caused by volcanic activity on the planet, have become the subject of intense academic debate. A minority of astronomers have argued the flashes may be artificial in origin, highlighting the odd green hue that is inconsistent with volcanic eruptions.\n\nSounder minds, such as Princeton graduate Dr. Richard Pearson have stated that these flashes are merely the result of latent meteorological phenomena on the Martian surface and are little more than a curiosity. Telescreens across the nation were, albeit briefly, focused primely on the astrological phenomena before moving on to other events in the news cycle."
@@ -181,7 +185,7 @@
   invasionendgame.4.a:0 "We will have our revenge."
 
   invasioncounterresponse.1.t:0 "The Martian Advance"
-  invasioncounterresponse.1.d:0 ""
+  invasioncounterresponse.1.d:0 "The Martians have successfully sundered at least one of the Great Powers, leaving the rest of us under threat. If humanity is to persist in the coming years, we must come together in order to fight this anomalous enemy.\n\nIt has been proposed that the German government pursue a new policy of international unity against the alien threat in the hope that we can drive the invaders from our planet."
   invasioncounterresponse.1.a:0 "Send out the call, we need help."
 
   invasioncounterresponse.2.t:0 "The War turns in favor of Mars"
@@ -189,7 +193,7 @@
   invasioncounterresponse.2.a:0 "We must do what we can to protect humanity."
 
   invasioncounterresponse.3.t:0 "The Humans are Mobilizing"
-  invasioncounterresponse.3.d:0 ""
+  invasioncounterresponse.3.d:0 "With our recent victories, it seems the humans have been spurned to action. In Germany, human diplomats have met to discuss terms of alliance, likely some coalition to be formed against our invasion. While on their own, humanity is a relatively simple enemy, once united they may pose a legitimate threat to our occupation.\n\nWe must watch these developments carefully."
   invasioncounterresponse.3.a:0 "What are they up to?"
 
   invasionflavor.1.t:0 "Examining Human History"
@@ -216,6 +220,7 @@
   PB_Establish_British_Isles_Occupation:0 "Establish the Isles Occupation Region"
   PB_Establish_Russian_Occupation:0 "Establish Eurasian Central Command"
   MIF_Integrate_State:0 "Establish Control over [From.GetName]"
+  MIF_Integrate_State_TFP:0 "Establish Control over [From.GetName]"
   PB_Process_Humans:0 "Process Humans into Biofuel"
 
   MIF_Target_Neighbor:0 "Invade the Next Enemy"
