--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -3871,15 +3871,15 @@ SAN_an_ADJ:0 "Indian"
  HAN_an_DEF:0 "Alemannia"
  HAN_cn:0 "Alemannia"
  HAN_cn_DEF:0 "Alemannia"
- HAN_lb:0 "Alemannia"
- HAN_lb_DEF:0 "Alemannia"
+ HAN_lb:0 "Kingdom of Hannover"
+ HAN_lb_DEF:0 "the Kingdom of Hannover"
  HAN_ss:0 "Alemannia"
  HAN_ss_DEF:0 "Alemannia"
  HAN_jc:0 "Alemannia"
  HAN_jc_DEF:0 "Alemannia"
  HAN_ni_ADJ:0 "French-Hannoverian"
  HAN_rc_ADJ:0 "French-Hannoverian"
- HAN_lb_ADJ:0 "French-Hannoverian"
+ HAN_lb_ADJ:0 "Hannoverian"
  HAN_ss_ADJ:0 "French-Hannoverian"
  HAN_jc_ADJ:0 "French-Hannoverian"
  HAN_ds_ADJ:0 "French-Hannoverian"
@@ -4273,8 +4273,8 @@ SAN_an_ADJ:0 "Indian"
  GOS_rc_DEF:0 "The Republic of Goshen"
  GOS_an:0 "Republic of Goshen"
  GOS_an_DEF:0 "The Republic of Goshen"
- GOS_cn:0 "Republic of Goshen"
- GOS_cn_DEF:0 "The Republic of Goshen"
+ GOS_cn:0 "United States of Goshen"
+ GOS_cn_DEF:0 "The United States of Goshen"
  GOS_lb:0 "Republic of Goshen"
  GOS_lb_DEF:0 "The Republic of Goshen"
  GOS_ss:0 "Republic of Goshen"
@@ -9055,44 +9055,56 @@ CYR_DEF:0 "the Kingdom of Cyprus"
 CYR_ADJ:0 "Cypriot"
 
 NGR:0 "Republic of Kaouar"
-NGR_DEF:0 "Republic of Kaouar"
+NGR_DEF:0 "the Republic of Kaouar"
 NGR_ADJ:0 "Kaouari"
 
 DJI:0 "Sagallo State"
-DJI_DEF:0 "Sagallo State"
+DJI_DEF:0 "the Sagallo State"
 DJI_ADJ:0 "Sagallo"
 
 SUR:0 "Republic of Suriname"
-SUR_DEF:0 "Republic of Suriname"
+SUR_DEF:0 "the Republic of Suriname"
 SUR_ADJ:0 "Surinamese"
 
 DOM:0 "Republic of Dominica"
-DOM_DEF:0 "Republic of Dominica"
+DOM_DEF:0 "the Republic of Dominica"
 DOM_ADJ:0 "Dominican"
 
 COS:0 "Republic of Costa Rica"
-COS_DEF:0 "Republic of Costa Rica"
+COS_DEF:0 "the Republic of Costa Rica"
 COS_ADJ:0 "Costa Rican"
 
 BLZ:0 "Republic of Belize"
-BLZ_DEF:0 "Republic of Belize"
+BLZ_DEF:0 "the Republic of Belize"
 BLZ_ADJ:0 "Belizian"
 
 MAC:0 "Republic of Macedonia"
-MAC_DEF:0 "Republic of Macedonia"
+MAC_DEF:0 "the Republic of Macedonia"
 MAC_ADJ:0 "Macedonian"
 
 ERI:0 "Republic of Eritrea"
-ERI_DEF:0 "Republic of Eritrea"
+ERI_DEF:0 "the Republic of Eritrea"
 ERI_ADJ:0 "Ertitrean"
 
 TAN:0 "Tuvan Republic"
-TAN_DEF:0 "Tuvan Republic"
+TAN_DEF:0 "the Tuvan Republic"
 TAN_ADJ:0 "Tuvan"
 
 FRI:0 "Republic of Frisia"
-FRI_DEF:0 "Republic of Frisia"
+FRI_DEF:0 "the Republic of Frisia"
 FRI_ADJ:0 "Frisian"
+
+LES:0 "Kingdom of Lesotho"
+LES_DEF:0 "the Kingdom of Lesotho"
+LES_ADJ:0 "Sesotho"
+
+NHH:0 "Nehalennia and Hesus"
+NHH_DEF:0 "Nehalennia and Hesus"
+NHH_ADJ:0 "Dutch"
+
+FRK:0 "Kingdom of Hesse"
+FRK_DEF:0 "the Kingdom of Hessen"
+FRK_ADJ:0 "Rhenish"
 
 MLD:0 "Republic Of The Maldives"
 MLD_DEF:0 "Republic Of The Maldives"
