--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -543,4 +543,20 @@ PB_SCA_New_Ford:0 "New Ford"
 unlock_mio_new_Ford:0 "The Military Industrial Organization §RNew Ford§! will be unlocked as a §YTruck Manufacturer§!"
 SCA_using_what_we_got:0 "Using what we have to get it done"
 SCA_take_over_lois_name:0 "Incorporate St.Louis Works"
- SCA_restore_production_name:0 "Restore Quality Production Standards"
+SCA_restore_production_name:0 "Restore Quality Production Standards"
+SCA_infantry_organization:0 "The Workshop"
+SCA_start_guns_scratch:0 "Starting from Scratch"
+SCA_i_need_screcws_damn_name:0 "Find me some screws!"
+SCA_convoyor_belt_name:0 "I need a Conveyor Belt..."
+SCA_real_furnaces_name:0 "A Real Furnace"
+SCA_put_that_there_name:0 "The First Apprentices"
+SCA_standardization_name:0 "Standardization of the Arsenal"
+SCA_tents_name:0 "The Men and Women yearn for Water Proof Field Tents"
+SCA_the_military_workshop_name:0 "The Military Workshop Commission"
+SCA_the_experimitation_room_name:0 "The Experimentation Corps"
+SCA_the_big_bullet_test_name:0 "The Big Bullet"
+SCA_industrial_workshop_name:0 "The Great Industrial Workshop"
+
+
+
+SCA_Fort_Washington_Armory:0 "Fort Washington Armory"
