--- a/localisation/english/PB_Game_Rules_l_english.yml
+++ b/localisation/english/PB_Game_Rules_l_english.yml
@@ -7,3 +7,20 @@
  PB_FRENCH_PATH_CHOICE:0 "@FRA French AI Strategy"
  PB_GERMAN_PATH_CHOICE:0 "@GER German AI Strategy"
  PB_BRITISH_PATH_CHOICE:0 "@ENG British AI Strategy"
+
+ RULE_GROUP_SPECIAL:0 "Special Event Rules"
+ PB_HALLOWEEN_ENABLE:0 "Enable 2023 Halloween Event Content"
+
+RULE_OPTION_2023_Halloween_Disabled:0 "Halloween 2023 Content Disabled"
+RULE_OPTION_2023_Halloween_Disabled_desc:0 "There is no life on Mars."
+ RULE_OPTION_2023_Halloween_Enabled:0 "Halloween 2023 Content Enabled"
+ RULE_OPTION_2023_Halloween_Enabled_DESC:0 "The Martian Invasion will occur in November of 1933."
+
+
+ PB_2023_Halloween_Difficulty:0 "Select Halloween Event Difficulty"
+ 2023_Halloween_Content_Easy_Difficulty:0 "Easy Difficulty | No Buffs"
+ 2023_Halloween_Content_Normal_Difficulty:0 "Normal Difficulty | Some Buffs"
+ 2023_Halloween_Content_High_Difficulty:0 "High Difficulty | Major Buffs"
+ 2023_Halloween_Content_Easy_Difficulty_desc:0 "The Martian Invasion will spawn with no buffs."
+ 2023_Halloween_Content_High_Difficulty_DESC:0 "The Martian Invasion will spawn with significant buffs."
+ 2023_Halloween_Content_Normal_Difficulty_DESC:0 "The Martian Invasion will spawn with some limited buffs."
