removal of old borders

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -9118,6 +9118,10 @@ COL:0 "Republic of Colombia"
 COL_DEF:0 "the Republic of Colombia"
 COL_ADJ:0 "Colombian"
 
+QAT:0 "Sheikdom of Qatar"
+QAT_DEF:0 "the Sheikdom of Qatar"
+QAT_ADJ:0 "Qatari"
+
 MLT_ni:0 "Maltese Protectorate"
 MLT_ni_DEF:0 "The Crown Colony of Malta"
 MLT_ds:0 "Maltese Protectorate"
