--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -957,3 +957,5 @@
  STATE_969:0 "Perak"
  STATE_970:0 "Kelantan"
  STATE_971:0 "Burgenland"
+ STATE_972:0 "Nanjing"
+ STATE_973:0 "Southern Jiangsu"
