I just did all other of my Master Pushes here

--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -57,6 +57,7 @@
   PB_MEX_EIEC:0 "Edison Imperial Electric Company"
   PB_MEX_Astimar:0 "ASTIMAR"
   PB_MEX_Talleres:0 "Talleres Nacionales de Construcciones Aeronáuticas"
+  MEX_talleres_range_buff:0 "Range Focus"
   PB_MEX_Panhard:0 "Panhard-Mexico"
   PB_MEX_Steyr:0 "Steyr-Daimler-Puch Mexico"
   PB_MEX_Green_Complex:0 "Revolución Verde"
