--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -32,6 +32,9 @@
  VICTORY_POINTS_537:0 "Küstrin"
  VICTORY_POINTS_309:0 "Oldenburg" 
  VICTORY_POINTS_11360:0 "Emden" 
+ VICTORY_POINTS_11811:0 "İzmit" 
+ VICTORY_POINTS_876:0 "Elaziğ" 
+ VICTORY_POINTS_11797:0 "Erzincan" 
  VICTORY_POINTS_6535:0 "Münster" 
  VICTORY_POINTS_405:0 "Bielefeld" 
  VICTORY_POINTS_6549:0 "Kassel" 
