America onto Russia Branch

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -30,6 +30,16 @@ AME_Freedman_Support_US_tt:0 "Freedman Militas §Gwill rise up against the South
 
 AME_Bleeding_South_disabled_tt:0 "§GThe Rebellion has been prevented§! - The Bleeding South will not be active anymore"
 
+ImpManagement_Acd_80_tt:0 "Acadian Alignment is greater then §b80%§!"
+
+AME_Caribean_Power_Game:0 "§bWith great dominance and a rivaling fleet in the Imperial Confederation, we will try to assert our power over the rest of the Caribean.§!"
+
+AME_Caribean_Power_Chance:0 "§YThe Chance of Success depends on your amount of Imperial Dominance, the Size of your Fleet and Imperial Tension.§!"
+
+AME_Dominion_Eco_Power_Take_Over_tt:0 "£GFX_decision_icon_small §BUnlocks decisions to take over the Economic Influence in the British Dominions and Commenwealths to bind them closer to us.§!"
+
+AME_Green_Heart_Donations:0 "§GEvery Dominion and Commenwealth will gain one free civilian factory and Industrial research bonus.§!"
+
 ##########################
 # PARTIES
 ##########################
@@ -338,6 +348,10 @@ PB_AME_Southern_Reperations:0 "Dixie Reperations"
 AME_Dixie_War_HAS_Begun:0 "The South has risen up"
 
 AME_Dixie_War_Defeated:0 "The Dixie Uprising has been crushed"
+
+PB_AME_Quebec_Bailout_Money:0 "American Sponsored Bailout"
+
+PB_AME_Quebec_Bailout_Debt:0 "Bailout Investments"
 
 ##########################
 # TRAITS
@@ -1043,10 +1057,10 @@ PB_AME_The_Empire_Green_Heart:0 "Green Heart of the Confederaion"
 PB_AME_The_Empire_Green_Heart:0 "Green Heart of the Confederaion"
 PB_AME_Favors_in_HK:0 "Favors on the Pearl Delta"
 PB_AME_Favors_in_HK:0 "Favors on the Pearl Delta"
-PB_AME_Royal_Airline:0 "The Royal Airline"
+PB_AME_Royal_Airline:0 "Commenwealth Airline"
 PB_AME_Royal_Airline:0 "The Royal Airline"
 PB_AME_Responsibiltiy_of_Automats_Crisis:0 "Who is responsible for all of this?"
-PB_AME_Company_War:0 "The Company Schism"
+PB_AME_Company_War:0 "The Puppet Schism"
 PB_AME_Unify_Bahamas:0 "Unify the Bahamas"
 PB_AME_Protector_Caribean:0 "Protector of the Carribean"
 PB_AME_Rebuild_Acadia:0 "Take Care of Acadia"
@@ -2069,7 +2083,7 @@ PB_AME_RevFlag_Option_1:0 "£UC_RevFlag_1"
 PB_AME_RevFlag_Option_2:0 "£UC_RevFlag_2"
 PB_AME_RevFlag_Option_3:0 "£UC_RevFlag_3"
 
-Imp_War_AME_Total_Vic_tt:0 "Has §RNOT§! been victorious in the Imperial Civil War"
+Imp_War_AME_Total_Vic_tt:0 "Has not §RNOT§! been victorious in the Imperial Civil War"
 
 AME_Suppressed_Agitation_tt:0 "§YAgitation from the Southern States and Freedmen will be temporarily suppressed.§!"
 AME_Suppressed_Unions_tt:0 "§YAgitation from the Unions will be temporarily suppressed.§!"
