--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -928,9 +928,9 @@
   GREATER_PRS_DEF:0 "the Greater Prussian Reich"
   GREATER_PRS_ADJ:0 "Prussian"
 
-  GREATER_PRS_2:0 "Großpreußisches Reich"
-  GREATER_PRS_2_DEF:0 "Großpreußisches Reich"
-  GREATER_PRS_2_ADJ:0 "Preußisches"
+  GREATER_PRS_2:0 "GroBpreuBisches Reich"
+  GREATER_PRS_2_DEF:0 "GroBpreuBisches Reich"
+  GREATER_PRS_2_ADJ:0 "PreuBisches"
 
   PRS_Universal_Empire:0 "Universal Empire"
   PRS_Universal_Empire_DEF:0 "the Universal Empire"
