--- a/localisation/english/PB_Holland_l_english.yml
+++ b/localisation/english/PB_Holland_l_english.yml
@@ -62,10 +62,13 @@ holland.9e.a:0 "A testimony to diplomacy!"
 #colonial tree 2
 holland.10.t:0 "The V.O.C's Offer"
 holland.10.d:0 "WIP"
-holland.10.a:0 "Accept Their Offer!"
+holland.10.a:0 "Accept their offer!"
 holland.11.t:0 "The Commission's Reply"
 holland.11.d:0 "WIP"
 holland.11.a:0 "The V.O.C. grows larger!"
+holland.12.t:0 "Introduction of Conscription"
+holland.12.d:0 "WIP"
+holland.12.a:0 "We cannot deny this."
 
 
   ##########################
@@ -87,6 +90,8 @@ PB_HOL_sapphire_revolution:0 "Echoes Of The Sapphire Revolution"
 PB_HOL_sapphire_revolution_desc:0 "When the waves of reformation and revolution swept Europe in the last century we too were not left untouched. Following France’s adoption of liberalism the House of Orange found itself challenged by the radical Patriotten; with them demanding an end to the hereditary statholderate and the return to true republican values.\n\nThe so-called “§RPatriottentijd§!” continued until 1795 when a string of riots and subsequent crackdowns led to their violent seizure of Amsterdam. In a bid for peace the Kingdom of France intervened to save the republic from anarchy, hoping to prevent the ambitions of its own radicals by snuffing out the Dutch Jacobins and instituting the aristocratic “§CSapphire Revolution§!”. Although the statholderate was abolished among these reforms, the dreams of the Patriotten were crushed as the French reinforced the old oligarchy that was hoped to be overturned.\n\nNow over a hundred years later the same calls for change are being echoed by a new generation of radicals. Riots flood the streets as the people grow uncontrollably restless, having grown impatient by our government’s reluctance to democratise. We can only hope to weather the storm at this point."
 PB_HOL_colosuss_of_sea:0 "Colossus Of The Sea"
 PB_HOL_colosuss_of_sea_desc:0 "While the other nations of Europe dedicated themselves to the Green Sahara Project, we undertook our own. With the new technologies at our disposal Dogger Bank was raised to create the new islands of Nehalennia and Hesus. These islands would quickly develop into modern settlements on par with the British African Settlements, although much less populous."
+PB_HOL_colosuss_of_sea_2:0 "Colossus Of The Sea"
+PB_HOL_colosuss_of_sea_2_desc:0 "While the other nations of Europe dedicated themselves to the Green Sahara Project, we undertook our own. With the new technologies at our disposal Dogger Bank was raised to create the new islands of Nehalennia and Hesus. These islands would quickly develop into modern settlements on par with the British African Settlements, although much less populous."
 PB_ORJ_lesotho_resistance:0 "Sesotho Resistance"
 PB_ORJ_lesotho_resistance_desc:0 "Ever since we settled in this region the Sesotho peoples have resisted our existence and no agreement has ever been able to be established between us and the Sesotho peoples, thus we are in conflict until one of the two sides is defeated or leaves."
 PB_HOL_dualistic_system_2:0 "Dualistic System"
@@ -144,8 +149,8 @@ HOL_boer_economic_bloc:0 "Found The Boer Economic Bloc"
 HOL_boer_economic_bloc_desc:0 "WIP"
 HOL_indonesian_question:0 "The Indonesian Question"
 HOL_indonesian_question_desc:0 "WIP"
-HOL_expand_colonial_education:0 "Expand Education in the Colonies"
-HOL_expand_colonial_education_desc:0 "WIP"
+HOL_rotterdam_hub:0 "The Rotterdam Trade Hub"
+HOL_rotterdam_hub_desc:0 "WIP"
 HOL_end_road_wars:0 "End the Road Wars"
 HOL_end_road_wars_desc:0 "WIP"
 HOL_empire_conscription:0 "Expand Conscription Across the Empire"
