The Irish Conspiracy is real

--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -10,7 +10,8 @@
   ######################################
   PB_Irish_Secession_Crisis_Active:0 "The Irish Secession Crisis"
 
-  PM_AME_American_Irish_Advisors:0 "Provide American Military Advisors In Ireland"
+  PM_AME_American_Irish_Investment:0 "Help Rebuilding Ireland"
+  PM_AME_American_Irish_Investment_desc:0 "Ireland is still reeling from the Great Famine of the 1850s which started a century long population decline. Many Irish came here as refugees hoping for better lifes and integrating themself into our society. There is popular support to help the burdens of Ireland."
   PM_AME_American_Quebec_Advisors:0 "Provide American Military Advisors to Quebec"
   PM_AME_American_Northwest_Investment:0 "Invest In The Northwest Territories"
   PM_AME_American_African_Investment:0 "Invest In The Saharan Colonies"
@@ -40,6 +41,7 @@
   AME_Imperial_Civil_War_Ceasfire:0 "Imperial Civil War Ceasfire"
   AME_Imperial_Civil_War_Ceasfire_desc:0 ""
 
+  AME_John_Curtin_Irish_Special:0 "Due to John Curtin's Irish Heritage £decision_icon_small §YDecision Cost§! regarding Irish Affairs in the Balance of Power will be §Greduced§!"
 
   imperial_tension_info:0 "Imperial Tension:"
 
@@ -111,6 +113,11 @@
   ImpCiv.4.t:0 "British Investment"
   ImpCiv.4.d:0 ""
   ImpCiv.4.a:0 "We'll take what we can get."
+
+
+  ImpCiv.5.t:0 "American Invests into Agriculture and Industries"
+  ImpCiv.5.d:0 ""
+  ImpCiv.5.a:0 "If only you could be our neighbours."
 
   ImpCiv_Crisis.1.t:0 "Concluding the Irish Crisis"
   ImpCiv_Crisis.1.d:0 ""
