We need to have a look at this file again

--- a/localisation/english/modifiers_l_english.yml
+++ b/localisation/english/modifiers_l_english.yml
@@ -108,6 +108,8 @@
  MODIFIER_AIR_SUPERIORITY_FACTOR:0 "Air Superiority"
  MODIFIER_AIR_SUPERIORITY:0 "Air Superiority"
  MODIFIER_CONSUMER_GOODS_FACTOR:0 "£GFX_consumer  Consumer Goods Factories"
+ consumer_goods_factor_tt: " $MODIFIER_CONSUMER_GOODS_FACTOR$: $RIGHT|Y=%1$"
+ MODIFIER_CONSUMER_GOODS_EXPECTED_VALUE: "Expected number of factories put on Consumer Goods"
  MODIFIER_AIR_ATTACK:0 "Air Attack"
  MODIFIER_AIR_ATTACK_FACTOR:0 "Air Attack"
  MODIFIER_AIR_DEFENCE:0 "Air Defense"
@@ -1638,6 +1640,7 @@
  MODIFIER_RAILWAY_GUN_BOMBARDMENT_FACTOR:0 "Railway Gun Bombardment"
  MODIFIER_UNIT_LEADER_AS_ADVISOR_CP_COST_FACTOR:0 "Commander as Advisor Cost"
  MODIFIER_INITIATIVE_FACTOR:0 "Initiative"
+ initiative_factor_tt: " $MODIFIER_INITIATIVE_FACTOR$: $RIGHT|+=%1$"
  MODIFIER_NAVAL_INVASION_PLANNING_SPEED:0 "Naval Invasion Planning"
  MODIFIER_NAVAL_INVASION_PLANNING_SPEED_DESC:0 "Increases the rate at which a division's planning bonus is accumulated during a naval invasion."
  NAVAL_INVASION_PLANNING_BONUS_MALUS:0 "Base Naval Invasion Malus: $VALUE|R0$§R%§!"
@@ -1650,7 +1653,9 @@
  modifier_production_cost_supply_node_factor_desc:0 "Modifies the cost of Supply Hub construction."
  MODIFIER_SUPPLY_PENALTY_ON_CORE:0 "Supply Combat Penalties on Core Territory"
  supply_combat_penalties_on_core_factor:0 "Supply Combat Penalties on Core Territory"
+ supply_combat_penalties_on_core_factor_tt: " $supply_combat_penalties_on_core_factor$: $RIGHT|-=%1$"
  coordination_bonus:0 "Coordination"
+ coordination_bonus_tt: " $coordination_bonus$: $RIGHT|+=%1$"
  MODIFIER_COORDINATION_BONUS:0 "Coordination"
  coordination_bonus_desc:0 "Coordination increases the amount of damage dealt to the primary target in combat. Other damage is spread over all other targets."
  MODIFIER_COORDINATION_BONUS_DESC:0 "Coordination increases the amount of damage dealt to the primary target in combat. Other damage is spread over all other targets."
@@ -1661,8 +1666,11 @@
  embargo_threshold_factor:0 "Embargo Tension Limit"
  embargo_cost_factor:0 "Embargo Cost Factor"
  MODIFIER_WEEKLY_CASUALTIES_WAR_SUPPORT:0 "Weekly War Support (Combat Casualties)"
+ weekly_casualties_war_support_tt: " $MODIFIER_WEEKLY_CASUALTIES_WAR_SUPPORT$: $RIGHT|+=%1$"
  MODIFIER_WEEKLY_CONVOYS_WAR_SUPPORT:0 "Weekly War Support (Sunk Convoys)"
+ weekly_convoys_war_support_tt: " $MODIFIER_WEEKLY_CONVOYS_WAR_SUPPORT$: $RIGHT|+=%1$"
  MODIFIER_WEEKLY_BOMBING_WAR_SUPPORT:0 "Weekly War Support (Enemy Bombing)"
+ weekly_bombing_war_support_tt: " $MODIFIER_WEEKLY_BOMBING_WAR_SUPPORT$: $RIGHT|+=%1$
  WAR_SUPPORT_AT_WAR_CURRENTLY_TITLE:0 "\n\nEffects While At War:"
  MODIFIER_ACE_EFFECTIVENESS_FACTOR:0 "Ace Effectiveness"
  MODIFIER_POWER_BALANCE_DAILY:0 "Daily balance of power change"
@@ -1674,3 +1682,38 @@
  MODIFIER_GRANT_MEDAL_COST_FACTOR:0 "Grant Medal Cost"
  MODIFIER_FIELD_OFFICER_PROMOTION_PENALTY:0 "Field Officer Division Penalty"
  MODIFIER_FEMALE_DIVISIONAL_COMMANDER_CHANCE:0 "Female Divisional Commander Chance"
+ MODIFIER_PARATROOPERS_SPECIAL_FORCES_CONTRIBUTION_FACTOR: "Paratrooper Special Forces Cap Contribution"
+ MODIFIER_MARINES_SPECIAL_FORCES_CONTRIBUTION_FACTOR: "Marine Special Forces Cap Contribution"
+ MODIFIER_MOUNTAINEERS_SPECIAL_FORCES_CONTRIBUTION_FACTOR: "Mountaineer Special Forces Cap Contribution"
+ modifier_unit_mountaineers_ski_design_cost_factor: "Ski Troops Design Cost"
+ modifier_unit_rangers_support_design_cost_factor: "Rangers Design Cost"
+ MODIFIER_BRIGADE_SIZE: "Brigade Size"
+ MODIFIER_MIO_RESEARCH_BONUS: "Military Industrial Organization Research Bonus"
+ MODIFIER_MIO_RESEARCH_BONUS_MIO_CONTEXT: "Research Bonus"
+ military_industrial_organization_research_bonus_tt: "$MODIFIER_MIO_RESEARCH_BONUS$: $RIGHT|+=%1$"
+ MODIFIER_MIO_DESIGN_TEAM_ASSIGN_COST: "Design Team Assign Cost"
+ MODIFIER_MIO_DESIGN_TEAM_CHANGE_COST: "Design Team Change Cost"
+ MODIFIER_MIO_INDUSTRIAL_MANUFACTURER_ASSIGN_COST: "Industrial Manufacturer Assign Cost"
+ MODIFIER_MIO_TASK_CAPACITY: "Task Capacity"
+ MODIFIER_MIO_FUNDS_SIZE_UP_REQUIREMENT: "Requirement for Size Up"
+ MODIFIER_MIO_FUNDS_GAIN: "Funds Gain"
+ MODIFIER_MIO_POLICY_COST_FACTOR: "Policy Cost"
+ MODIFIER_MIO_POLICY_COOLDOWN_FACTOR: "Policy Cooldown"
+ MODIFIER_CIC_CONSTRUCTION_BOOST: "Base construction line speed boost"
+ MODIFIER_CIC_CONSTRUCTION_BOOST_FACTOR: "Construction line speed boost multiplier"
+ MODIFIER_LAND_BUNKER_EFFECTIVENESS_FACTOR: "$bunker$ effectiveness"
+ MODIFIER_COASTAL_BUNKER_EFFECTIVENESS_FACTOR: "$coastal_bunker$ effectiveness"
+
+ army_spirit_category_type_cost_factor: "Army Command Spirit Cost"
+ air_spirit_category_type_cost_factor: "Air Force Command Spirit Cost"
+ navy_spirit_category_type_cost_factor: "Navy Command Spirit Cost"
+
+ resistance_damage_to_garrison_on_our_occupied_states_tt: " Damage to Enemy Garrisons in our states occupied by the enemy: $RIGHT|+=%1$"
+ whitespace_tt: " "
+ large_plane_airframe_design_cost_factor: "Large Plane Design Cost"
+ MODIFIER_SPECIAL_FORCES_CAP_FLAT: "Special Forces Cap"
+ special_forces_cap_flat_tt: "$MODIFIER_SPECIAL_FORCES_CAP_FLAT$: $RIGHT|+=%0$"
+ MODIFIER_ARMY_SUB_UNIT_CATEGORY_SPECIAL_FORCES_MAX_ORG_FACTOR: "Special Forces Organization"
+ special_forces_mountaineers_organization_tt: " $modifier_army_sub_unit_mountaineers_max_org_factor$: $RIGHT|+=0%$"
+ special_forces_marines_organization_tt: " $modifier_army_sub_unit_marines_max_org_factor$: $RIGHT|+=0%$"
+ SWE_royal_visit_modifier: "$POL_growing_monarchist_sentiment$"
