--- a/localisation/english/modifiers_l_english.yml
+++ b/localisation/english/modifiers_l_english.yml
@@ -1575,8 +1575,10 @@
  MODIFIER_AIR_ADVISOR_COST_FACTOR:0 "Air Advisor Cost"
  MODIFIER_NAVY_ADVISOR_COST_FACTOR:0 "Navy Advisor Cost"
  MODIFIER_ACE_BONUSES_FACTOR:0 "Air aces bonuses"
+ air_ace_bonuses_factor_tt: " $MODIFIER_ACE_BONUSES_FACTOR$: $RIGHT|+=%1$"
  MODIFIER_AIR_UNTRAINED_PILOTS_PENALTY_FACTOR:1 "Untrained pilots penalty for new Air Wings"
  MODIFIER_AIR_HOME_DEFENCE_FACTOR:0 "Air home defence factor"
+ air_home_defence_factor_tt: " $MODIFIER_AIR_HOME_DEFENCE_FACTOR$: $RIGHT|+=%1$"
  MODIFIER_AIR_POWER_PROJECTION_FACTOR:0 "Air power projection factor"
  MODIFIER_AIR_CARRIER_NIGHT_PENALTY_REDUCTION_FACTOR:0 "Carrier night penalty reduction"
  MODIFIER_ARMY_ADVISOR_COST_FACTOR:0 "Army Advisor Cost"
