--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -851,22 +851,22 @@
  DAF_cn_ADJ:0 "German-African"
  DAF_an_ADJ:0 "German-African"
 
- PRE_ni:0 "Kaapkolonie"
- PRE_ni_DEF:0 "The Kaapkolonie"
- PRE_ds:0 "Kaapkolonie"
- PRE_ds_DEF:0 "The Kaapkolonie"
- PRE_rc:0 "Kaapkolonie"
- PRE_rc_DEF:0 "The Kaapkolonie"
- PRE_an:0 "Kaapkolonie"
- PRE_an_DEF:0 "The Kaapkolonie"
- PRE_cn:0 "Kaapkolonie"
- PRE_cn_DEF:0 "The Kaapkolonie"
- PRE_lb:0 "Kaapkolonie"
- PRE_lb_DEF:0 "The Kaapkolonie"
- PRE_ss:0 "Kaapkolonie"
- PRE_ss_DEF:0 "The Kaapkolonie"
- PRE_jc:0 "Kaapkolonie"
- PRE_jc_DEF:0 "The Kaapkolonie"
+ PRE_ni:0 "Cape Colony"
+ PRE_ni_DEF:0 "The Cape Colony"
+ PRE_ds:0 "Cape Colony"
+ PRE_ds_DEF:0 "The Cape Colony"
+ PRE_rc:0 "Cape Colony"
+ PRE_rc_DEF:0 "The Cape Colony"
+ PRE_an:0 "Cape Colony"
+ PRE_an_DEF:0 "The Cape Colony"
+ PRE_cn:0 "Cape Colony"
+ PRE_cn_DEF:0 "The Cape Colony"
+ PRE_lb:0 "Cape Colony"
+ PRE_lb_DEF:0 "The Cape Colony"
+ PRE_ss:0 "Cape Colony"
+ PRE_ss_DEF:0 "The Cape Colony"
+ PRE_jc:0 "Cape Colony"
+ PRE_jc_DEF:0 "The Cape Colony"
  PRE_ni_ADJ:0 "Afrikaner"
  PRE_rc_ADJ:0 "Afrikaner"
  PRE_lb_ADJ:0 "Afrikaner"
@@ -6694,30 +6694,30 @@ SAN_an_ADJ:0 "Indian"
  AOB_cn_ADJ:0 "Outback"
  AOB_an_ADJ:0 "Outback"
 
- WWW_ni:0 ""
- WWW_ni_DEF:0 ""
- WWW_ds:0 ""
- WWW_ds_DEF:0 ""
- WWW_rc:0 ""
- WWW_rc_DEF:0 ""
- WWW_an:0 ""
- WWW_an_DEF:0 ""
- WWW_cn:0 ""
- WWW_cn_DEF:0 ""
- WWW_lb:0 ""
- WWW_lb_DEF:0 ""
- WWW_ss:0 ""
- WWW_ss_DEF:0 ""
- WWW_jc:0 ""
- WWW_jc_DEF:0 ""
- WWW_ni_ADJ:0 "Cowboy"
- WWW_rc_ADJ:0 "Cowboy"
- WWW_lb_ADJ:0 "Cowboy"
- WWW_ss_ADJ:0 "Cowboy"
- WWW_jc_ADJ:0 "Cowboy"
- WWW_ds_ADJ:0 "Cowboy"
- WWW_cn_ADJ:0 "Cowboy"
- WWW_an_ADJ:0 "Cowboy"
+ WWW_ni:0 "Aboriginal Tribes"
+ WWW_ni_DEF:0 "Aboriginal Tribes"
+ WWW_ds:0 "Aboriginal Tribes"
+ WWW_ds_DEF:0 "Aboriginal Tribes"
+ WWW_rc:0 "Aboriginal Tribes"
+ WWW_rc_DEF:0 "Aboriginal Tribes"
+ WWW_an:0 "Aboriginal Tribes"
+ WWW_an_DEF:0 "Aboriginal Tribes"
+ WWW_cn:0 "Aboriginal Tribes"
+ WWW_cn_DEF:0 "Aboriginal Tribes"
+ WWW_lb:0 "Aboriginal Tribes"
+ WWW_lb_DEF:0 "Aboriginal Tribes"
+ WWW_ss:0 "Aboriginal Tribes"
+ WWW_ss_DEF:0 "Aboriginal Tribes"
+ WWW_jc:0 "Aboriginal Tribes"
+ WWW_jc_DEF:0 "Aboriginal Tribes"
+ WWW_ni_ADJ:0 "Aboriginal"
+ WWW_rc_ADJ:0 "Aboriginal"
+ WWW_lb_ADJ:0 "Aboriginal"
+ WWW_ss_ADJ:0 "Aboriginal"
+ WWW_jc_ADJ:0 "Aboriginal"
+ WWW_ds_ADJ:0 "Aboriginal"
+ WWW_cn_ADJ:0 "Aboriginal"
+ WWW_an_ADJ:0 "Aboriginal"
 
  STA_ni:0 "Union Standard Oil Company"
  STA_ni_DEF:0 "The Union Standard Oil Company"
