--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1230,3 +1230,4 @@
  VICTORY_POINTS_4528:0 "Springbok"
  VICTORY_POINTS_1688:0 "Pietersburg"
  VICTORY_POINTS_4556:0 "Haardorp"
+ VICTORY_POINTS_12976:0 "Heerenhaven"
