--- a/localisation/english/PB_Holland_l_english.yml
+++ b/localisation/english/PB_Holland_l_english.yml
@@ -32,14 +32,12 @@ holland.6.t:0 "English Government Accepts"
 holland.6.d:0 "WIP"
 holland.6.a:0 "Let's get to work!"
 #colonial tree
-holland.7.t:0 "A United Administration"
+holland.7.t:0 "The V.O.C's Influence In China"
 holland.7.d:0 "WIP"
-holland.7.a:0 "option a"
-holland.7.b:0 "option b"
-holland.7.c:0 "option c"
-holland.8.t:0 "The V.O.C's Influence In China"
+holland.7.a:0 "The Commission Must Accept!"
+holland.8.t:0 "A United Administration?"
 holland.8.d:0 "WIP"
-holland.8.a:0 "The Commission Must Accept!"
+holland.8.a:0 "Let the merge begin!"
 #second antwerp conference
 holland.9.t:0 "The Second Antwerp Conference"
 holland.9.d:0 "WIP"
@@ -69,6 +67,15 @@ holland.11.a:0 "The V.O.C. grows larger!"
 holland.12.t:0 "Introduction of Conscription"
 holland.12.d:0 "WIP"
 holland.12.a:0 "We cannot deny this."
+holland.13.t:0 "The Indonesian Question"
+holland.13.d:0 "WIP"
+holland.13.a:0 "Corporatist Haven"
+holland.13.b:0 "Colonial Paternalism"
+holland.13.c:0 "Limited Autonomy"
+holland.14.t:0 "Fate of the Bandits"
+holland.14.d:0 "WIP"
+holland.14.a:0 "Imprison them!"
+holland.14.a:0 "Excecute the bastards!"
 
 
   ##########################
@@ -76,6 +83,8 @@ holland.12.a:0 "We cannot deny this."
   ##########################
 PB_HOL_colonial_influence:0 "V.O.C. Profits"
 PB_HOL_colonial_influence_desc:0 "WIP"  
+PB_HOL_road_wars:0 "The Road War"
+PB_HOL_road_wars_desc:0 "WIP"
 PB_HOL_dualistic_system:0 "Dualistic System"
 PB_HOL_dualistic_system_desc:0 "The provinces of the Dutch Republic can be roughly categorised into two types.\n\nThe first are the “regenten” provinces, where representatives to the States General are elected by urban noblemen and merchant families. Holland is the most influential among these and is often the deciding say in who becomes State Pensionary.\n\nSecond are the “free” provinces which have public referendums to elect their representatives, although laws within these provinces may differ in who is enfranchised.\nFor most of the republic’s modern history these have been rural regions without an entrenched merchant or landowning class.\nHowever the shocking admission of Flanders as a free province in 1898 permanently upset the balance of power, and ever since the two provincial blocs have been locking horns, both vying to stymie the other’s power and impose their grand visions for the republic."
 PB_HOL_republican_agitation_1:0 "Republican Agitation - §Y(Small)§!" 
@@ -88,6 +97,10 @@ PB_HOL_greenhouse_of_europe_2:0 "The Greenhouse of Europe"
 PB_HOL_greenhouse_of_europe_2_desc:0 "Our nation is renowned for its expertise in the biological sciences. Developments in genetic engineering have yielded crops that are hardier and more nutritious, while other research projects have opened up new opportunities in medicine, electrotech and human augmentation."
 PB_HOL_sapphire_revolution:0 "Echoes Of The Sapphire Revolution"
 PB_HOL_sapphire_revolution_desc:0 "When the waves of reformation and revolution swept Europe in the last century we too were not left untouched. Following France’s adoption of liberalism the House of Orange found itself challenged by the radical Patriotten; with them demanding an end to the hereditary statholderate and the return to true republican values.\n\nThe so-called “§RPatriottentijd§!” continued until 1795 when a string of riots and subsequent crackdowns led to their violent seizure of Amsterdam. In a bid for peace the Kingdom of France intervened to save the republic from anarchy, hoping to prevent the ambitions of its own radicals by snuffing out the Dutch Jacobins and instituting the aristocratic “§CSapphire Revolution§!”. Although the statholderate was abolished among these reforms, the dreams of the Patriotten were crushed as the French reinforced the old oligarchy that was hoped to be overturned.\n\nNow over a hundred years later the same calls for change are being echoed by a new generation of radicals. Riots flood the streets as the people grow uncontrollably restless, having grown impatient by our government’s reluctance to democratise. We can only hope to weather the storm at this point."
+PB_HOL_sapphire_revolution_2:0 "Echoes Of The Sapphire Revolution"
+PB_HOL_sapphire_revolution_2_desc:0 "When the waves of reformation and revolution swept Europe in the last century we too were not left untouched. Following France’s adoption of liberalism the House of Orange found itself challenged by the radical Patriotten; with them demanding an end to the hereditary statholderate and the return to true republican values.\n\nThe so-called “§RPatriottentijd§!” continued until 1795 when a string of riots and subsequent crackdowns led to their violent seizure of Amsterdam. In a bid for peace the Kingdom of France intervened to save the republic from anarchy, hoping to prevent the ambitions of its own radicals by snuffing out the Dutch Jacobins and instituting the aristocratic “§CSapphire Revolution§!”. Although the statholderate was abolished among these reforms, the dreams of the Patriotten were crushed as the French reinforced the old oligarchy that was hoped to be overturned.\n\nNow over a hundred years later the same calls for change are being echoed by a new generation of radicals. Riots flood the streets as the people grow uncontrollably restless, having grown impatient by our government’s reluctance to democratise. We can only hope to weather the storm at this point."
+PB_HOL_sapphire_revolution_3:0 "Echoes Of The Sapphire Revolution"
+PB_HOL_sapphire_revolution_3_desc:0 "When the waves of reformation and revolution swept Europe in the last century we too were not left untouched. Following France’s adoption of liberalism the House of Orange found itself challenged by the radical Patriotten; with them demanding an end to the hereditary statholderate and the return to true republican values.\n\nThe so-called “§RPatriottentijd§!” continued until 1795 when a string of riots and subsequent crackdowns led to their violent seizure of Amsterdam. In a bid for peace the Kingdom of France intervened to save the republic from anarchy, hoping to prevent the ambitions of its own radicals by snuffing out the Dutch Jacobins and instituting the aristocratic “§CSapphire Revolution§!”. Although the statholderate was abolished among these reforms, the dreams of the Patriotten were crushed as the French reinforced the old oligarchy that was hoped to be overturned.\n\nNow over a hundred years later the same calls for change are being echoed by a new generation of radicals. Riots flood the streets as the people grow uncontrollably restless, having grown impatient by our government’s reluctance to democratise. We can only hope to weather the storm at this point."
 PB_HOL_colosuss_of_sea:0 "Colossus Of The Sea"
 PB_HOL_colosuss_of_sea_desc:0 "While the other nations of Europe dedicated themselves to the Green Sahara Project, we undertook our own. With the new technologies at our disposal Dogger Bank was raised to create the new islands of Nehalennia and Hesus. These islands would quickly develop into modern settlements on par with the British African Settlements, although much less populous."
 PB_HOL_colosuss_of_sea_2:0 "Colossus Of The Sea"
