--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4387,6 +4387,11 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   FIN_Uprising_cn_ADJ:0 "Finnish"
   FIN_Uprising_an_ADJ:0 "Finnish"
 
+  PRE_UNI_ds:0 "Afikaner Federation"
+  PRE_UNI_ds_DEF:0 "The Afikaner Federation"
+  PRE_UNI_ds_ADJ:0 "Afrikaner"
+  
+
   FIN_Uprising_Jacobin_ni:0 "Forces for Greater Finland"
   FIN_Uprising_Jacobin_ni_DEF:0 "The Forces for Greater Finland"
   FIN_Uprising_Jacobin_ds:0 "Finnish Military Alliance"
